fixed hero section to wrap
used flex-wrap: wrap and width % on image, also set a min-width on the image

--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,20 @@ ul{
 .card-list {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     gap:20px;
     padding: 4% 15%;
     font-family: Roboto, Georgia, 'Times New Roman', serif;
 }
 
+.hero-img{
+    flex:1;
+    align-self: center;
+}
+
 .hero img{
-    width: 400px;
+    width: 100%;
+    min-width: 300px;
 
 }
 
@@ -56,8 +63,10 @@ ul{
 
 .hero-content{
     display: flex;
+    flex:1;
     flex-direction: column;
     align-items: flex-start;
+    width:40%;
 }
 
 button{
